--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cheerio": "^0.19.0",
     "mime": "^1.3.4",
     "node-promise": "^0.5.12",
+    "node-uuid": "^1.4.3",
     "q": "^1.4.1",
     "request": "^2.60.0",
     "url": "^0.10.3"
