--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "node-promise": "^0.5.12",
     "node-uuid": "^1.4.3",
     "q": "^1.4.1",
-    "request": "^2.60.0",
-    "url": "^0.10.3"
+    "request": "^2.60.0"
   }
 }
