--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Replace images in html to content-id resources links",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
     "node-uuid": "^1.4.3",
     "q": "^1.4.1",
     "request": "^2.60.0"
+  },
+  "devDependencies": {
+    "jasmine": "^2.3.2"
   }
 }
